[tool.poetry]
name = "swell-auth-cognito"
version = "0.1.0"
description = "Basic authentication service using AWS Cognito's User Pools"
authors = ["Jack Keck <jackkeck3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aniso8601 = "8.0.0"
arrow = "0.15.6"
astroid = "2.4.1"
attrs = "19.3.0"
binaryornot = "0.4.4"
boto3 = "1.11.15"
botocore = "1.14.15"
certifi = "2019.11.28"
cffi = "1.14.0"
chardet = "3.0.4"
Click = "7.0"
cookiecutter = "1.7.2"
cryptography = "2.8"
docopt = "0.6.2"
docutils = "0.15.2"
ecdsa = "0.15"
fastapi = "0.54.2"
Flask = "1.0"
Flask-AWSCognito = "1.3"
flask-restplus = "0.13.0"
flask-restx = "0.2.0"
gunicorn = "20.0.4"
h11 = "0.9.0"
httptools = "0.1.1"
idna = "2.9"
importlib-metadata = "1.6.0"
isort = "4.3.21"
itsdangerous = "1.1.0"
Jinja2 = "2.11.1"
jinja2-time = "0.2.0"
jmespath = "0.9.4"
jsonschema = "3.2.0"
lazy-object-proxy = "1.4.3"
MarkupSafe = "1.1.1"
mccabe = "0.6.1"
Pillow = "7.0.0"
pipreqs = "0.4.10"
poyo = "0.5.0"
pyasn1 = "0.4.8"
pycparser = "2.19"
pydantic = "1.5.1"
pylint = "2.5.2"
pymongo = "3.10.1"
pyOpenSSL = "19.1.0"
pyrsistent = "0.16.0"
python-dateutil = "2.8.1"
python-jose = "3.1.0"
python-slugify = "4.0.0"
pytz = "2020.1"
requests = "2.23.0"
rsa = "4.0"
s3transfer = "0.3.3"
sentry-sdk = "0.14.4"
six = "1.14.0"
starlette = "0.13.2"
text-unidecode = "1.3"
toml = "0.10.0"
typed-ast = "1.4.1"
urllib3 = "1.25.8"
uvicorn = "0.11.5"
uvloop = "0.14.0"
uWSGI = "2.0.18"
websockets = "8.1"
Werkzeug = "1.0.0"
wrapt = "1.12.1"
yarg = "0.1.9"
zipp = "3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
